2010-09-26  Juan J. Merelo  <jmerelo@sheldon>

	*  (Warning): Fixed some docs, and added tests to avoid test FAILs in 0.0.3

2010-01-06    <jmerelo@localhost.localdomain>

	* MANIFEST: 0.0.3 starts with a new TODO file. 

2010-01-01  Juan J. Merelo  <jmerelo@vega>

	* MANIFEST: 0.0.2 tries to fix some errors and add app code. 

Revision history for Net-Lujoyglamour

0.0.1  Tue Oct  6 19:31:52 2009
       Initial release.
